<resources>
    <string name="app_name">AppAvaluos</string>
    <string name="login_btn">Iniciar sesión</string>
    <string name="signin_link">No tienes una cuenta? Regístrate</string>
    <string name="signin_btn">Registrarse</string>

    <!-- Agendar citas -->
    <string name="agendar_visita">¡Agenda tu visita!</string>
    <string name="info_personal">Información personal</string>
    <string name="info_detallada">Información detallada</string>
    <string name="dia_preferido">Día preferido para la visita</string>

    <string name="hint_nombre">Nombre / Empresa</string>
    <string name="hint_correo">Correo</string>
    <string name="hint_telefono">Número de contacto</string>
    <string name="hint_direccion">Dirección</string>
    <string name="hint_fecha">DD/MM/AAAA</string>

    <string name="siguiente">Siguiente</string>

    <!-- Características avaluo -->
    <string name="caracteristicas_inmueble">Características del inmueble</string>
    <string name="caracteristicas_entorno">Características del entorno</string>
    <string name="folio_placeholder">Folio: %1$s</string>
    <string name="aceptar">Aceptar</string>
    <string name="btn_back">Regresar</string>

    <!-- Características habitaciones -->
    <string name="sala">Sala</string>
    <string name="comedor">Comedor</string>
    <string name="cocina">Cocina</string>
    <string name="bano">Baño</string>
    <string name="recamara">Recamara</string>
    <string name="estancia">Estancia</string>
    <string name="patio_posterior">Patio Posterior</string>
    <string name="estacionamiento">Estacionamiento</string>
    <string name="terraza">Terraza</string>

    <!-- Características instalaciones -->
    <string name="instalaciones_hidraulicas">Instalaciones Hidráulicas</string>
    <string name="instalaciones_sanitarias">Instalaciones Sanitarias</string>
    <string name="instalaciones_electricas">Instalaciones Eléctricas</string>
    <string name="obras_complementarias">Obras Complementarias</string>
    <string name="elementos_accesorios">Elementos Accesorios</string>

    <!-- Mensajes -->
    <string name="guardado_exito">Guardado con éxito</string>

    <!--    info avaluos-->
    <string name="significado_avaluos">Un avalúo es una estimación del valor económico de un bien, como un inmueble, realizada por un profesional certificado, con base en criterios técnicos y de mercado.</string>
    <string name="importancia_avaluos">Los avalúos son importantes porque permiten conocer el valor real de un bien para tomar decisiones informadas en compras, ventas, préstamos o seguros.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>