<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgendarCitasFragment"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:layout_marginBottom="80dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="16dp">

            <!-- Logo circular -->
            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/whale"
                android:background="@drawable/circulo_fondo"
                android:padding="16dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:adjustViewBounds="true"
                android:scaleType="centerInside"
                android:layout_gravity="center"/>

            <!-- Título -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/agendar_visita"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold" />

            <!-- Información personal -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text="@string/info_personal"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <!-- Nombre -->
            <EditText
                android:id="@+id/nombre_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:hint="@string/hint_nombre"
                android:inputType="text"
                android:padding="15dp"
                android:textColorHint="#757575"
                android:textSize="18sp" />

            <!-- Información detallada -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:text="@string/info_detallada"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <!-- Correo -->
            <EditText
                android:id="@+id/correo_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:hint="@string/hint_correo"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:textColorHint="#757575"
                android:textSize="18sp" />

            <!-- Teléfono -->
            <EditText
                android:id="@+id/telefono_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:hint="@string/hint_telefono"
                android:inputType="phone"
                android:padding="15dp"
                android:textColorHint="#757575"
                android:textSize="18sp" />

            <!-- Dirección -->
            <EditText
                android:id="@+id/direccion_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:hint="@string/hint_direccion"
                android:inputType="textPostalAddress"
                android:padding="15dp"
                android:textColorHint="#757575"
                android:textSize="18sp" />

            <!-- Día preferido -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:text="@string/dia_preferido"
                android:textColor="#000000"
                android:textSize="20sp" />

            <!-- Fecha -->
            <EditText
                android:id="@+id/fecha_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:hint="@string/hint_fecha"
                android:inputType="date"
                android:padding="15dp"
                android:textColorHint="#757575"
                android:textSize="18sp" />

            <!-- Botón Siguiente -->
            <Button
                android:id="@+id/siguiente_btn"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="24dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/round_button"
                android:text="@string/siguiente"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>